versioned_docs/version-5.0/client-api/operations/attachments/put-attachment.mdx
---
title: "Operations: Attachments: How to Put an Attachment"
hide_table_of_contents: true
sidebar_label: Put Attachment
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Operations: Attachments: How to Put an Attachment
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


This operation is used to put an attachment to a document. 

## Syntax

<TabItem value="put_attachment_syntax" label="put_attachment_syntax">
<CodeBlock language="csharp">
{`public PutAttachmentOperation(string documentId, 
        string name, 
        Stream stream, 
        string contentType = null, 
        string changeVector = null)
`}
</CodeBlock>
</TabItem>

<TabItem value="put_attachment_return_value" label="put_attachment_return_value">
<CodeBlock language="csharp">
{`public class AttachmentDetails : AttachmentName
\{
    public string ChangeVector;
    public string DocumentId;
\}

public class AttachmentName
\{
    public string Name;
    public string Hash;
    public string ContentType;
    public long Size;
\}
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | string | ID of a document which will contain an attachment |
| **name** | name | Name of an attachment |
| **stream** | Stream | Stream contains attachment raw bytes |
| **contentType** | string | MIME type of attachment |
| **changeVector** | string | Entity changeVector, used for concurrency checks (`null` to skip check) |

| Return Value | |
| ------------- | ----- |
| **ChangeVector** | Change vector of created attachment |
| **DocumentId** | ID of document |
| **Name** | Name of created attachment |
| **Hash** | Hash of created attachment |
| **ContentType** | MIME content type of attachment |
| **Size** | Size of attachment |

## Example

<TabItem value="put_1" label="put_1">
<CodeBlock language="csharp">
{`AttachmentDetails attachmentDetails =
    store.Operations.Send(
        new PutAttachmentOperation("orders/1-A",
            "invoice.pdf",
            stream,
            "application/pdf"));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="java">


This operation is used to put an attachment to a document. 

## Syntax

<TabItem value="put_attachment_syntax" label="put_attachment_syntax">
<CodeBlock language="java">
{`PutAttachmentOperation(String documentId, String name, InputStream stream)

PutAttachmentOperation(String documentId, String name, InputStream stream, String contentType)

PutAttachmentOperation(String documentId, String name, InputStream stream, String contentType, String changeVector)
`}
</CodeBlock>
</TabItem>

<TabItem value="put_attachment_return_value" label="put_attachment_return_value">
<CodeBlock language="java">
{`public class AttachmentDetails extends AttachmentName \{
    private String changeVector;
    private String documentId;

    public String getChangeVector() \{
        return changeVector;
    \}

    public void setChangeVector(String changeVector) \{
        this.changeVector = changeVector;
    \}

    public String getDocumentId() \{
        return documentId;
    \}

    public void setDocumentId(String documentId) \{
        this.documentId = documentId;
    \}
\}

public class AttachmentName \{
    private String name;
    private String hash;
    private String contentType;
    private long size;

    public String getName() \{
        return name;
    \}

    public void setName(String name) \{
        this.name = name;
    \}

    public String getHash() \{
        return hash;
    \}

    public void setHash(String hash) \{
        this.hash = hash;
    \}

    public String getContentType() \{
        return contentType;
    \}

    public void setContentType(String contentType) \{
        this.contentType = contentType;
    \}

    public long getSize() \{
        return size;
    \}

    public void setSize(long size) \{
        this.size = size;
    \}
\}
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | String | ID of a document which will contain an attachment |
| **name** | String | Name of an attachment |
| **stream** | InputStream | Stream contains attachment raw bytes |
| **contentType** | String | MIME type of attachment |
| **changeVector** | String | Entity changeVector, used for concurrency checks (`null` to skip check) |

| Return Value | |
| ------------- | ----- |
| **ChangeVector** | Change vector of created attachment |
| **DocumentId** | ID of document |
| **Name** | Name of created attachment |
| **Hash** | Hash of created attachment |
| **ContentType** | MIME content type of attachment |
| **Size** | Size of attachment |

## Example

<TabItem value="put_1" label="put_1">
<CodeBlock language="java">
{`AttachmentDetails attachmentDetails = store
    .operations().send(new PutAttachmentOperation("orders/1-A",
        "invoice.pdf",
        stream,
        "application/pdf"));
`}
</CodeBlock>
</TabItem>


</LanguageContent>

<!---
### Operations
- [What are Operations](../../../client-api/operations/what-are-operations)
- [Get Attachment](../../../client-api/operations/attachments/get-attachment)
- [Delete Attachment](../../../client-api/operations/attachments/delete-attachment)


-->